*******************************************************************************
Version 1.6.13
*******************************************************************************

2011-03-15 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	New UpnpRegisterRootDevice4 for legacy CPs.

	Add a new UpnpRegisterRootDevice4 which allow user to specify a
	description URL to be returned for legacy CPs (for example, CPs
	searching for a v1 when the device is v2). Most of those CPs does not
	work if they found a v2 in the XML description, so this new function is
	only used to solve interoperability issues.

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>
	Fix for memory leak.

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>
	Fix and Update of MSVC9 solution and project files - now compile in all
	modes. Added x64 and static library targets.

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>
	Partial fix for UpnpGetIfInfo with MSVC - convert wchar string to
	char string (full fix requires a lot of work - potentially impacting
	all supported platforms)

2011-03-11 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Created the macros PRIzd and PRIzx to deal with MSVC lack of C99.
	Thanks to Iain Denniston for pointing it out.

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>

	Fixes for headers when compiled under C++

2011-03-08 Iain Denniston <iain.denniston(at)gmail.com>

	Fix for uuid_unpack incorrect shift precedence.

*******************************************************************************
Version 1.6.12
*******************************************************************************

2011-02-08 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Undo the "incorrectly exported include files".
	
	Legacy applications like linux-igd and igd2-for-linux are using those
	API to create a thread pool for managing their GENA events.

	Leave it to be reworked in 1.8.x.
